tests/errors/unknown_type.err
Type Error: Unknown type: `foo`
On file `tests/errors/unknown_type.vrv` at 1:11
1: fn f() -> foo { }
             ^
